cleaning up continuity of compositions

--- a/notes/continuity.tex
+++ b/notes/continuity.tex
@@ -30,14 +30,12 @@ etc.)
 \subsubsection*{Five easy proofs}
 
 \paragraph{Constants.} Let $f(x)=c$. Then $f$ is continuous at all $a$
-because $\lim_{x\to a}f(x)=c=f(a)$.
-
-\vs
+because
+\[\lim_{x\to a}f(x)=c=f(a)\]
 
 \paragraph{Identity.} Let $f(x)=x$. Then $f$ is continuous at all $a$
-because $\lim_{x\to a}f(x)=a=f(a)$.
-
-\vs
+because
+\[\lim_{x\to a}f(x)=a=f(a)\]
 
 \paragraph{Addition.} Let $f,g\in\R\to\R$ be continuous at $a$. Then
 $f+g$ is continuous at $a$ because
@@ -45,12 +43,11 @@ $f+g$ is continuous at $a$ because
 
 \paragraph{Multiplication.} Let $f,g\in\R\to\R$ be continuous at $a$. Then
 $f\cdot g$ is continuous at $a$ because
-\[\lim_{x\to a}(fg)(x)=\lim_{x\to a}f(x)\cdot\lim_{x\to a}g(x)=f(a)g(a)=(fg)(a)\]
+\[\lim_{x\to a}(fg)(x)=\lim_{x\to a}f(x)\cdot\lim_{x\to a}g(x)=f(a)\cdot g(a)=(fg)(a)\]
 
-\paragraph{Reciprocal.} Let $f$ be continuous at $a$. Then $\frac{1}{g}$
+\paragraph{Reciprocal.} Let $g$ be continuous at $a$. Then $\frac{1}{g}$
 is continuous at $a$ where $g(a)\neq 0$ because
 \[\lim_{x\to a}\left(\frac{1}{g}\right)(x)=\frac{1}{\lim_{x\to a}g(x)}=\frac{1}{g(a)}=\left(\frac{1}{g}\right)(a)\]
-(recall that we proved in the limits chapter that $\frac{1}{g}$ is defined.)
 
 \subsubsection*{Slightly harder proof: composition}
 
@@ -71,8 +68,8 @@ By problem statement we have two continuities.
 \vs
 
 \textbf{First}, $f$ is continuous at $g(a)$, i.e.
-$\lim_{y\to g(a)}f(y)=f(g(a))$. Thus there exists $\delta'>0$ such that
-$|y-g(a)|<\delta'$ implies $|f(y)-f(g(a))|<\epsilon$.
+$\lim_{X\to g(a)}f(X)=f(g(a))$. Thus there exists $\delta'>0$ such that
+$|X-g(a)|<\delta'$ implies $|f(X)-f(g(a))|<\epsilon$.
 
 \vs
 
@@ -84,10 +81,13 @@ $\epsilon$ be anything, we can set it to $\delta'$.
 \vs
 
 I.e. there exists $\delta>0$ such that $|x-a|<\delta$ implies
-$|g(x)-g(a)|<\delta'$. Which by the first statement implies
-$|f(g(x))-f(g(a))|<\epsilon$, as desired.
+$|g(x)-g(a)|<\delta'$. Intuitively, $g(x)$ is close to $g(a)$. But by the
+first continuity, $X$ close to $g(a)$ implies
+\[|f(X)-f(g(a))|<\epsilon\]
 
-\subsection{Continuity and discontinuity examples}
+Thus $|f(g(x))-f(g(a))|<\epsilon$, as desired.
+
+\subsection{Appendix: example functions}
 
 %%% Local Variables:
 %%% TeX-master: "index"
