--- a/notes/limits.tex
+++ b/notes/limits.tex
@@ -622,6 +622,11 @@ $|x-2|<1$ and $|x-2|<\frac{2\epsilon}{3}$, the inequality
 $|\frac{3}{x}-\frac{3}{2}|<\epsilon$ holds. Putting the two constraints
 together, we get $\delta=\min(1, \frac{2\epsilon}{3})$.
 
+\subsection{Appendix: example functions}
+
+\subsubsection*{Dirichlet function}
+
+
 %%% Local Variables:
 %%% TeX-master: "index"
 %%% End:
