--- a/notes/continuity.tex
+++ b/notes/continuity.tex
@@ -82,12 +82,12 @@ $\epsilon$ be anything, we can set it to $\delta'$.
 
 I.e. there exists $\delta>0$ such that $|x-a|<\delta$ implies
 $|g(x)-g(a)|<\delta'$. Intuitively, $g(x)$ is close to $g(a)$. But by the
-first continuity, $X$ close to $g(a)$ implies
+first continuity, any $X$ close to $g(a)$ implies
 \[|f(X)-f(g(a))|<\epsilon\]
 
 Thus $|f(g(x))-f(g(a))|<\epsilon$, as desired.
 
-\subsection{Appendix: example functions}
+\subsection{Appendix: Stars over Babylon}
 
 %%% Local Variables:
 %%% TeX-master: "index"
