Adding hw files

--- a/notes/continuity.tex
+++ b/notes/continuity.tex
@@ -88,6 +88,16 @@ first continuity, any $X$ close to $g(a)$ implies
 Thus $|f(g(x))-f(g(a))|<\epsilon$, as desired.
 
 \subsection{Appendix: Stars over Babylon}
+Stars over Babylon is a modification of the Dirichlet function (see
+\ref{subsubsec:dirichlet}). It is defined as follows:
+\[
+f(x) = 
+\begin{cases} 
+1 & \text{for rational } x,\\
+0 & \text{for irrational } x.
+\end{cases}
+\]
+
 
 %%% Local Variables:
 %%% TeX-master: "index"
