--- a/notes/index.tex
+++ b/notes/index.tex
@@ -1,7 +1,8 @@
 \documentclass{article}
 \usepackage{../style}
 
-\title{Slava A's notes working through Spivak's Calculus}
+\title{Notes working through Spivak's Calculus}
+\author{Slava Akhmechet}
 
 \begin{document}
 
