--- a/notes/limits.tex
+++ b/notes/limits.tex
@@ -492,13 +492,13 @@ Similarly if $L\geq 0$ take $x=-\delta/2$. Then
 
 \[|f(x)-L|=|f(-\delta/2)-L|=\left|\frac{-\delta/2}{|-\delta/2|}-L\right|=|-1-L|>\frac{1}{10}\]
 
-\subsubsection*{Example: Dirichlet function}
+\subsubsection*{Example: Dirichlet function} \label{subsubsec:dirichlet}
 The \textit{dirichlet} function $f$ is defined as follows:
 \[
 f(x) = 
 \begin{cases} 
-0 & \text{for irrational } x, \\
-1 & \text{for rational } x.
+1 & \text{for rational } x,\\
+0 & \text{for irrational } x.
 \end{cases}
 \]
 
