stars of babylon

--- a/notes/continuity.tex
+++ b/notes/continuity.tex
@@ -89,14 +89,11 @@ Thus $|f(g(x))-f(g(a))|<\epsilon$, as desired.
 
 \subsection{Appendix: Stars over Babylon}
 Stars over Babylon is a modification of the Dirichlet function (see
-\ref{subsubsec:dirichlet}). It is defined as follows:
-\[
-f(x) = 
-\begin{cases} 
-1 & \text{for rational } x,\\
-0 & \text{for irrational } x.
-\end{cases}
-\]
+\ref{subsubsec:dirichlet}).
+
+\vs
+
+\textbf{TODO}: come back and study this.
 
 
 %%% Local Variables:
