--- a/hw/ch1.tex
+++ b/hw/ch1.tex
@@ -1,4 +1,4 @@
-\section{Chapter 1}
+\section{Basic Properties of Numbers}
 
 \subsection*{Problem 1v}
 Prove $x^n-y^n=(x-y)(x^{n-1}+x^{n-2}y+\ldots+xy^{n-2}+y^{n-1})$
@@ -163,5 +163,5 @@ Similarly
 \end{align*}
 
 %%% Local Variables:
-%%% TeX-master: "index"
+%%% TeX-master: "hw"
 %%% End:
