--- a/hw/ch2.tex
+++ b/hw/ch2.tex
@@ -1,4 +1,4 @@
-\section{Chapter 2}
+\section{Numbers of various sorts}
 \subsection*{Problem 1i}
 Prove the following formula by induction
 \[1^2+\ldots+n^2=\frac{n(n+1)(2n+1)}{6}\]
@@ -125,5 +125,5 @@ Prove that $\sqrt{2}+\sqrt{6}$ is irrational.
 Suppose $\sqrt{2}+\sqrt{6}$ is rational. Then its square $8+4\sqrt{3}$ must be rational as well. Recall that $\mathcal{Q}$ is closed under addition, thus $8+4\sqrt{3}+(-8)=4\sqrt{3}$ is rational. Similarly, $\mathcal{Q}$ is closed under multiplication, thus $4\sqrt{3}\cdot\frac{1}{4}=\sqrt{3}$ is rational. We have a contradiction, and thus $\sqrt{2}+\sqrt{6}$ is irrational as desired.
 
 %%% Local Variables:
-%%% TeX-master: "index"
+%%% TeX-master: "hw"
 %%% End:
