--- a/hw/ch3.tex
+++ b/hw/ch3.tex
@@ -1,4 +1,4 @@
-\section{Chapter 3}
+\section{Functions}
 \subsection*{Problem 3ii}
 Find the domain of the function defined by the following formula
 \[f(x)=\sqrt{1-\sqrt{1-x^2}}\]
@@ -83,5 +83,5 @@ Suppose $f$ is odd, $g$ is even. Then $f\circ g$ is even:
 \[(f\circ g)(x)=f(g(x))=f(g(-x))=(f\circ g)(-x)\]
 
 %%% Local Variables:
-%%% TeX-master: "index"
+%%% TeX-master: "h3"
 %%% End:
