--- a/hw/ch4.tex
+++ b/hw/ch4.tex
@@ -1,4 +1,4 @@
-\section{Chapter 4}
+\section{Graphs}
 \subsection*{Problem 1iv}
 Indicate on a straight line the set of all x satisfying the following condition. Name the set, using the notation for intervals.
 \[|x^2-1|<\frac{1}{2}\]
@@ -112,5 +112,5 @@ Below the $x$ axis $g(x)=f(x)$. Above the $x$ axis $g(x)=0$ (i.e. above the $x$ 
 Similar to viii, but instead of $x$ axis everything below $y=1$ line gets squashed as a line onto $y=1$. I.e. nothing gets drawn below that line.
 
 %%% Local Variables:
-%%% TeX-master: "index"
+%%% TeX-master: "hw"
 %%% End:
