--- a/hw/ch5.tex
+++ b/hw/ch5.tex
@@ -215,5 +215,5 @@ Let $\epsilon=\frac{1}{10}$. We handle two cases. First suppose $L<\frac{1}{2}$.
 Similarly, suppose $L>\frac{1}{2}$. Pick any irrational $x$ from the interval $0<|x-a|<\delta$. Then $|f(x)-L|=|0-L|>\frac{1}{2}$. Thus $|f(x)-L|\geq\frac{1}{10}$.
 
 %%% Local Variables:
-%%% TeX-master: "index"
+%%% TeX-master: "hw"
 %%% End:
