--- a/notes/continuity.tex
+++ b/notes/continuity.tex
@@ -97,5 +97,5 @@ Stars over Babylon is a modification of the Dirichlet function (see
 
 
 %%% Local Variables:
-%%% TeX-master: "index"
+%%% TeX-master: "notes"
 %%% End:
