--- a/notes/limits.tex
+++ b/notes/limits.tex
@@ -656,5 +656,5 @@ $|\frac{3}{x}-\frac{3}{2}|<\epsilon$ holds. Putting the two constraints
 together, we get $\delta=\min(1, \frac{2\epsilon}{3})$.
 
 %%% Local Variables:
-%%% TeX-master: "index"
+%%% TeX-master: "notes"
 %%% End:
