--- a/hw/ch6.tex
+++ b/hw/ch6.tex
@@ -49,5 +49,5 @@ $|(f+\alpha)(x)-\alpha|<\alpha$. In another words within the interval $f+\alpha$
 than $\alpha$ away from $\alpha$, and thus cannot be zero.
 
 %%% Local Variables:
-%%% TeX-master: "index"
+%%% TeX-master: "hw"
 %%% End:
