--- a/notes/notes.tex
+++ b/notes/notes.tex
@@ -16,10 +16,23 @@ doesn't use anything beyond basic middle school math. Feels like it
 should be simple! And so I'm attempting to write these notes to
 properly understand the damned thing.
 
+\vs
+
+Spivak's chapters 7 (Three Hard Theorems) and 8 (Least Upper Bounds)
+are swapped in these notes. Spivak first introduces the Intermediate
+Value theorem and the Extreme Value theorem as facts, proves their
+consequences, then introduces completeness and its consequences, and
+finally proves IVT and EVT. I find it distracting and confusing. I
+introduce completeness and its consequences first. I then introduce
+and prove IVT and EVT, and cover their consequences. IMO this approach
+is much less confusing than Spivak's.
+
 \tableofcontents
 
 \input{limits.tex}
 \input{continuity.tex}
+\input{completeness.tex}
+\input{continuity2.tex}
 
 \end{document}
 
