--- a/notes/completeness.tex
+++ b/notes/completeness.tex
@@ -133,8 +133,7 @@ case, it is better to build calculus upon abstract complete ordered
 fields than upon concrete real numbers.
 
 \subsection{Consequences of completeness}
-\textbf{Claim 1:} let $S$ be a complete ordered field. Then $\sqrt{2}\in
-S$.
+\textbf{Claim 1:} $\sqrt{2}\in\mathcal{R}$.
 
 \textbf{Proof:} TBD
 
@@ -159,7 +158,7 @@ that $\alpha=\sup \mathcal{N}$. Therefore $\mathcal{N}$ is not bounded above, as
 
 \subsubsection*{Archimedean property}
 
-\subsection{Density}
+\subsubsection*{Density}
 
 \subsection{Appendix: sqrt(2) is irrational}\label{sqrt2proof}
 Suppose $\sqrt{2}\in\mathcal{Q}$. Then there exist $a,b\in\mathcal{N}$ such that
