--- a/hw-ch1-4/hw.tex
+++ b/hw-ch1-4/hw.tex
@@ -8,16 +8,15 @@
 
 \maketitle
 
+Only the first four chapters are here. I started taking notes at
+chapter 5, so the homework problems are inlined in the notes.
+
 \tableofcontents
 
 \input{ch1.tex}
 \input{ch2.tex}
 \input{ch3.tex}
 \input{ch4.tex}
-\input{ch5.tex}
-\input{ch6.tex}
-\input{ch7.tex}
-\input{ch8.tex}
 
 \end{document}
 
