starting proof rationals are dense

--- a/completeness.tex
+++ b/completeness.tex
@@ -252,7 +252,21 @@ is an element of $S$ between any two points in $\mathcal{R}$.
 
 \textbf{Claim:} the set of rational numbers $\mathcal{Q}$ is dense.
 
-\textbf{Proof:} TBD
+\textbf{Proof:} let $x,y\in\mathcal{R}$ be given. Suppose we can show there exists
+a rational in $(x, y)$ for $0\leq x<y$. Then:
+\begin{itemize}
+\item Given $x<y\leq0$, there is a rational $r$ in $(-y, -x)$. So $-r$ is
+  in $(x,y)$.
+\item Given $x<0<y$, there is a rational $r$ in $(y,0)$. So $r$ is of
+  course also in $(x,y)$.
+\end{itemize}
+Thus all we must do is prove there exists a rational in $(x, y)$ for
+$0\leq x<y$.
+
+\vs
+
+Let $0\leq x<y$ be given. 
+
 
 \vs
 
